SecurutyConfig error fix